用户系统正常运行

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,17 @@
         <version>${spring.version}</version>
       </dependency>
 
+      <!--<dependency>
+        <groupId>org.apache.zookeeper</groupId>
+        <artifactId>zookeeper</artifactId>
+        <version>3.4.6</version>
+      </dependency>-->
+      <dependency>
+        <groupId>com.101tec</groupId>
+        <artifactId>zkclient</artifactId>
+        <version>0.10</version>
+      </dependency>
+
       <dependency>
         <groupId>com.alibaba</groupId>
         <artifactId>dubbo</artifactId>
@@ -69,6 +80,7 @@
         <artifactId>druid</artifactId>
         <version>RELEASE</version>
       </dependency>
+
     </dependencies>
   </dependencyManagement>
 </project>
