--- a/emall-trade/src/main/resources/pom.xml
+++ b/emall-trade/src/main/resources/pom.xml
@@ -7,7 +7,7 @@
 	<version>{project.version}</version>
   </parent>
   <artifactId>emall-trade</artifactId>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
   <name>emall-trade</name>
 
   <dependencies>
