--- a/emall-frontend/pom.xml
+++ b/emall-frontend/pom.xml
@@ -2,16 +2,15 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-	<groupId>org.lr.expriment</groupId>
-	<artifactId>emall</artifactId>
-	<version>{project.version}</version>
+    <groupId>org.lr.expriment</groupId>
+    <artifactId>emall</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>emall-frontend</artifactId>
   <packaging>jar</packaging>
-  <name>emall-frontend</name>
 
-  <dependencyManagement>
-    <dependencies>
-    </dependencies>
-  </dependencyManagement>
+  <name>emall-frontend</name>
+  <description>前端系统</description>
+
+  <dependencies></dependencies>
 </project>
