--- a/emall-pay/pom.xml
+++ b/emall-pay/pom.xml
@@ -2,13 +2,15 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-	<groupId>org.lr.expriment</groupId>
-	<artifactId>emall</artifactId>
-	<version>{project.version}</version>
+    <groupId>org.lr.expriment</groupId>
+    <artifactId>emall</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>emall-pay</artifactId>
   <packaging>jar</packaging>
+
   <name>emall-pay</name>
+  <description>支付系统</description>
 
   <dependencyManagement>
     <dependencies>
