--- a/emall-shopping-cart/pom.xml
+++ b/emall-shopping-cart/pom.xml
@@ -2,16 +2,15 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-	<groupId>org.lr.expriment</groupId>
-	<artifactId>emall</artifactId>
-	<version>{project.version}</version>
+    <groupId>org.lr.expriment</groupId>
+    <artifactId>emall</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>emall-shopping-cart</artifactId>
   <packaging>jar</packaging>
-  <name>emall-shopping-cart</name>
 
-  <dependencyManagement>
-    <dependencies>
-    </dependencies>
-  </dependencyManagement>
+  <name>emall-shopping-cart</name>
+  <description>购物车系统</description>
+
+  <dependencies></dependencies>
 </project>
