--- a/emall-user/pom.xml
+++ b/emall-user/pom.xml
@@ -2,12 +2,14 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.lr.expriment</groupId>
-    <artifactId>emall</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.3.2.RELEASE</version>
   </parent>
+  <groupId>com.emall</groupId>
   <artifactId>emall-user</artifactId>
-  <packaging>jar</packaging>
+  <version>1.0.0-SNAPSHOT</version>
+  <packaging>pom</packaging>
 
   <name>emall-user</name>
   <description>用户系统</description>
