--- a/emall-user/emall-user-provider/src/main/resources/application.yml
+++ b/emall-user/emall-user-provider/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/trip_docking?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://localhost:3306/user_db?characterEncoding=utf-8&useSSL=false
     username: root
     password: root
     driverClassName: com.mysql.jdbc.Driver
@@ -21,10 +21,10 @@ spring:
       filters: stat,wall,slf4j
       connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 mybatis:
-  type-aliases-package: org.trip.docking.model
+  type-aliases-package: org.emall.user.model
   mapper-locations: classpath:mapper/*.xml
 dubbo:
   application:
-    name: trip-docking
+    name: emall-user-provider
   registry:
     address: zookeeper://localhost:2181
