--- a/emall-user/emall-user-provider/src/main/resources/application.yml
+++ b/emall-user/emall-user-provider/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/user_db?characterEncoding=utf-8&useSSL=false
-    username: root
-    password: root
+    url: jdbc:mysql://10.10.24.122:3306/user_db?characterEncoding=utf-8&useSSL=false
+    username: zuzhi_dev
+    password: meZvE3KTGZiJYG
     driverClassName: com.mysql.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
     druid:
@@ -20,6 +20,11 @@ spring:
       maxPoolPreparedStatementPerConnectionSize: 20
       filters: stat,wall,slf4j
       connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    password:
+    database: 0
 mybatis:
   type-aliases-package: org.emall.user.model
   mapper-locations: classpath:mapper/*.xml
