--- a/emall-facade/src/main/resources/application.yml
+++ b/emall-facade/src/main/resources/application.yml
@@ -11,5 +11,8 @@ dubbo:
     name: emall-facade
   registry:
     address: zookeeper://localhost:2181
+  consumer:
+    check: false
+    lazy: true
 server:
   port: 80
