--- a/emall-user/emall-user-provider/pom.xml
+++ b/emall-user/emall-user-provider/pom.xml
@@ -80,9 +80,9 @@
             <version>1.3.2</version>
         </dependency>
         <dependency>
-            <groupId>tk.mybatis</groupId>
-            <artifactId>mapper-spring-boot-starter</artifactId>
-            <version>2.0.2</version>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.5.12</version>
         </dependency>
         <dependency>
             <groupId>com.github.pagehelper</groupId>
