用户角色与权限;认证与授权

--- a/emall-common/pom.xml
+++ b/emall-common/pom.xml
@@ -24,9 +24,9 @@
             <version>1.18.34</version>
         </dependency>
         <dependency>
-            <groupId>javax.persistence</groupId>
-            <artifactId>persistence-api</artifactId>
-            <version>1.0</version>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-annotation</artifactId>
+            <version>3.5.12</version>
         </dependency>
     </dependencies>
     <build>
