--- a/emall-user/emall-user-provider/src/main/resources/application.yml
+++ b/emall-user/emall-user-provider/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://10.10.24.122:3306/user_db?characterEncoding=utf-8&useSSL=false
-    username: zuzhi_dev
-    password: meZvE3KTGZiJYG
+    url: jdbc:mysql://mysql.middleware.emall.docker:3306/user_db?characterEncoding=utf-8&useSSL=false
+    username: root
+    password: root
     driverClassName: com.mysql.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
     druid:
@@ -21,7 +21,7 @@ spring:
       filters: stat,wall,slf4j
       connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
   redis:
-    host: 127.0.0.1
+    host: redis.middleware.emall.docker
     port: 6379
     password:
     database: 0
@@ -35,4 +35,4 @@ dubbo:
   application:
     name: emall-user-provider
   registry:
-    address: zookeeper://localhost:2181
+    address: zookeeper://zookeeper.middleware.emall.docker:2181
