--- a/emall-service/emall-service-component/pom.xml
+++ b/emall-service/emall-service-component/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -9,10 +10,10 @@
         <relativePath/>
     </parent>
     <groupId>org.emall</groupId>
-    <artifactId>emall-service-user</artifactId>
+    <artifactId>emall-service-component</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <description>用户模块-服务提供者</description>
+    <description>服务公共组件</description>
     <properties>
         <spring.boot.version>2.3.2.RELEASE</spring.boot.version>
         <spring.cloud.version>Hoxton.SR7</spring.cloud.version>
@@ -33,12 +34,7 @@
         <!-- 项目内部的jar包 -->
         <dependency>
             <groupId>org.emall</groupId>
-            <artifactId>emall-api-user</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.emall</groupId>
-            <artifactId>emall-service-component</artifactId>
+            <artifactId>emall-common</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <!-- 项目内部的jar包 -->
@@ -194,18 +190,6 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
                 </configuration>
             </plugin>
         </plugins>
