--- a/emall-service/pom.xml
+++ b/emall-service/pom.xml
@@ -15,7 +15,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
     <modules>
-        <module>emall-service-facade</module>
+        <module>emall-service-component</module>
         <module>emall-service-cart</module>
         <module>emall-service-order</module>
         <module>emall-service-pay</module>
@@ -23,5 +23,6 @@
         <module>emall-service-search</module>
         <module>emall-service-sms</module>
         <module>emall-service-user</module>
+        <module>emall-service-facade</module>
     </modules>
 </project>
