--- a/emall-frontend/emall-frontend-web/package.json
+++ b/emall-frontend/emall-frontend-web/package.json
@@ -9,13 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.22"
+    "@ant-design/icons-vue": "^7.0.1",
+    "vue": "^3.5.22",
+    "vue-amazing-ui": "^2.4.22"
   },
   "devDependencies": {
     "@types/node": "^24.6.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
     "typescript": "~5.9.3",
+    "unplugin-vue-components": "^30.0.0",
     "vite": "^7.1.7",
     "vue-tsc": "^3.1.0"
   }
