--- a/emall-frontend/emall-frontend-web/package.json
+++ b/emall-frontend/emall-frontend-web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
+    "axios": "^1.12.2",
     "vue": "^3.5.22",
     "vue-amazing-ui": "^2.4.22"
   },
