--- a/emall-frontend/emall-frontend-web/package.json
+++ b/emall-frontend/emall-frontend-web/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
+    "@element-plus/icons-vue": "^2.3.2",
     "axios": "^1.12.2",
+    "element-plus": "^2.11.5",
     "vue": "^3.5.22",
     "vue-amazing-ui": "^2.4.22"
   },
