--- a/emall-frontend/emall-frontend-web/package.json
+++ b/emall-frontend/emall-frontend-web/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.12.2",
     "element-plus": "^2.11.5",
     "vue": "^3.5.22",
-    "vue-amazing-ui": "^2.4.22"
+    "vue-amazing-ui": "^2.4.22",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@types/node": "^24.6.0",
