--- a/emall-service/pom.xml
+++ b/emall-service/pom.xml
@@ -3,17 +3,16 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.emall</groupId>
+    <parent>
+        <groupId>org.emall</groupId>
+        <artifactId>emall-super-pom</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../emall-super-pom/pom.xml</relativePath>
+    </parent>
     <artifactId>emall-service</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <properties>
-        <java.version>1.8</java.version>
-        <maven.compiler.source>${java.version}</maven.compiler.source>
-        <maven.compiler.target>${java.version}</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    </properties>
+    <description>服务模块</description>
     <modules>
         <module>emall-service-component</module>
         <module>emall-service-cart</module>
@@ -26,4 +25,12 @@
         <module>emall-service-user</module>
         <module>emall-service-facade</module>
     </modules>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
