--- a/emall-api/emall-api-search/pom.xml
+++ b/emall-api/emall-api-search/pom.xml
@@ -12,4 +12,15 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <description>搜索模块-服务API</description>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-elasticsearch</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.emall</groupId>
+            <artifactId>emall-api-user</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
