--- a/emall-super-pom/pom.xml
+++ b/emall-super-pom/pom.xml
@@ -15,7 +15,7 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <maven.compiler.version>3.14.0</maven.compiler.version>
-        <spring.boot.dependencies.version>2.3.2.RELEASE</spring.boot.dependencies.version>
+        <spring.boot.dependencies.version>2.7.18</spring.boot.dependencies.version>
         <spring.cloud.dependencies.version>Hoxton.SR7</spring.cloud.dependencies.version>
         <org.emall.dependencies.version>1.0.0-SNAPSHOT</org.emall.dependencies.version>
     </properties>
